--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="profile">
 
       <img src="images/swetha-modified.png" class="top-pic" alt="Swetha-img">
-      <h2>Hi,</h2>
+      <h2>Hiya,</h2>
       <p> I am an Engineer graduate with strong technological skills and analytical skills purusing my Masters in Fintech and policy at Universy of Surrey (Surrey Business School).
 
       </p>
